[project]
name = "ttcli"
version = "0.1.0"
description = "Minimal TickTick CLI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "typer>=0.24.1",
]

[project.scripts]
ttcli = "ttcli.main:app"

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "ttcli"
module-root = "src"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.0",
    "playwright>=1.58.0",
    "ty>=0.0.32",
    "pytest-cov>=7.1.0",
    "pre-commit>=4.6.0",
]
